<resources>
    <string name="app_name">Дневник</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Мой дневник</string>
    <string name="nav_header_subtitle" translatable="false">Well, Keep it simple</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Задания</string>
    <string name="menu_gallery">Личный кабинет</string>
    <string name="menu_slideshow">Настройки</string>
    <string name="familia">Фамилия</string>
    <string name="name">Имя</string>
    <string name="otchestvo">Отчество</string>
    <string name="title_activity_view_document">ViewDocument</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>