<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/d_et_last_name"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:hint="@string/familia"
        android:singleLine="true"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/d_et_name"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:hint="@string/name"
        android:singleLine="true"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/d_et_patronymic"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:hint="@string/otchestvo"
        android:singleLine="true"
        android:inputType="textPersonName"/>

</LinearLayout>